# skyline-console

./: '  .babelrc  .dockerignore  .eslintignore  .eslintrc  .gitignore  .gitreview  .stylelintignore  .stylelintrc.json  .zuul.yaml  Gruntfile.js  MANIFEST.in  Makefile  README-zh_CN.md  README-zh_CN.rst  README.md  README.rst  cypress.json  jest.config.js  jsconfig.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-workflows.yaml  skyline-console-wheel.yaml
README/: README-ko_KR.rst
config/: config.yaml  cosApiProxy.js  js-string-replace-loader.js  less-replace-loader.js  server.dev.js  theme-custom.js  theme.js  utils.js  webpack.common.js  webpack.dev.js  webpack.e2e.js  webpack.prod.js
doc/: README.rst  requirements.txt
doc/source/: conf.py  glossary.rst  index.rst
playbooks/devstack/: post.yaml  pre.yaml
playbooks/python-tarball/: post.yaml  run.yaml
releasenotes/: README.rst
releasenotes/notes/: Add-JWT-Expire-Check-c4dce4d269782a8c.yaml  Add-Setting-Key-Description-54a1702f2f25e4d5.yaml  FIX-ZUN-UI-997f060449876f33.yaml  Fix-Change-Password-And-Password-Validation-1a9633368fb8dbcb.yaml  Fix-Label-Of-Node-Count-In-Magnum-Cluster-207d96a2899569b4.yaml  Fix-Network-Availability-And-Usage-Stats-Showing-46c89740ccc36e04.yaml  Optimize-Configuration-Reading-5914bb51c3ecb0c4.yaml  Optimize-ID-Name-Column-1b5248237f6f7053.yaml  Optimize-System-Setting-Display-48aff7362665a942.yaml  Show-Data-Disk-Of-Snapshot-3b23e998665187c1.yaml  Support-A-Custom-Theme-fe56c9dc8d3bfe03.yaml  Support-Application-Credential-Unrestricted-1940ac44f96576ac.yaml  Support-Attach-Network-And-Detach-Network-For-Zun-Container-e41980df3f67c5b5.yaml  Support-Clear-Selected-80e66080d37c96e3.yaml  Support-Custom-Button-For-Upload-c44a4ff8e55c5961.yaml  Support-Custom-Local-Language-84ad3016c2469a51.yaml  Support-Default-Hidden-Columns-3e668eb6c62a1686.yaml  Support-Disable-Enable-Router-SNAT-1f09d5e8aa1a07bb.yaml  Support-Domain-Name-Filter-1d433cb2d548ca2f.yaml  Support-Edit-Domain-Name-874d87160550c8f0.yaml  Support-External-Network-Name-For-Router-760ab8b579e548c7.yaml  Support-Flavor-Add-CPU-Memory-Search-f6b17125d7f82df7.yaml  Support-Fwaas-V2-055c1e400f093ede.yaml  Support-Global-Navigation-45412aa3603c4f14.yaml  Support-Insert-Headers-For-LB-Listener-32142f05b85eec4f.yaml  Support-Instance-For-Openstack-Service-Monitor-4e2fb683f379b639.yaml  Support-Korean-I18n-6f258836f7b30db9.yaml  Support-No-Boot-From-Volume-Instance-09f802a7c0c53052.yaml  (+40 more)
releasenotes/source/: conf.py  (+1 more)
scripts/: deployToDevRemote.sh  remote_hosts.properties.example
skyline_console/: __init__.py  __main__.py  version.py
(+2098 files in other folders)
