[tool.poetry]
name = "skyline-console"
version = "0.1.0"
description = ""
authors = ["OpenStack <openstack-discuss@lists.openstack.org>"]
include = ["skyline_console/static/**/*"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
reno = {extras = ["sphinx"], version = "^3.5.0"}
openstackdocstheme = "^2.4.0"
Jinja2 = "2.11.3"
MarkupSafe = "2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
